--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 
      if (senderHotel && senderName && recipientHotel && recipientName && customMessage) {
          // Enviar los datos al servidor con axios
-         axios.post('https://correio-2.vercel.app/save-message', {
+         axios.post('https://correio-2-fermellog3s-projects.vercel.app/save-message', {
              senderHotel,
              senderName,
              recipientHotel,
