--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@
  window.onload = loadMessages;
 
  function loadMessages() {
-     axios.get('https://vercel.com/fermellog3s-projects/correio-2/9AN498f1SeoYyEqqRVceFrHkkwq9/api/messages')
+     axios.get('https://correio-2-fermellog3s-projects.vercel.app/api/messages')
          .then(response => {
              const messages = response.data;
              const messageBox = document.getElementById('message-box');
