cambio de save message

--- a/public/index.html
+++ b/public/index.html
@@ -282,7 +282,7 @@
 
     if (senderHotel && senderName && recipientHotel && recipientName && customMessage) {
         // Enviar los datos al servidor con axios
-        axios.post('https://www.natalhoteispires.com.br/save-message', {
+        axios.post('https://www.natalhoteispires.com.br/api/save-message', {
             senderHotel,
             senderName,
             recipientHotel,
