--- a/public/index.html
+++ b/public/index.html
@@ -195,6 +195,11 @@
                 <option value="Itajai Express">Itajai Express</option>
                 <option value="Italia">Italia</option>
                 <option value="Administrativo">Administrativo</option>
+                <option value="Administrativo">Administrativo</option>
+                <option value="Mercure">Mercure</option>
+                <option value="Novotel">Novotel</option>
+                <option value="Ibis Styles">Ibis Styles</option>
+                <option value="Ibis Combo">Ibis Combo</option>
             </select>
 
             <!-- Campo para el nombre del remitente -->
@@ -210,6 +215,11 @@
                 <option value="Itajai Express">Itajai Express</option>
                 <option value="Italia">Italia</option>
                 <option value="Administrativo">Administrativo</option>
+                 <option value="Administrativo">Administrativo</option>
+                <option value="Mercure">Mercure</option>
+                <option value="Novotel">Novotel</option>
+                <option value="Ibis Styles">Ibis Styles</option>
+                <option value="Ibis Combo">Ibis Combo</option>
             </select>
 
             <!-- Campo para el nombre del receptor -->
