--- a/public/index.html
+++ b/public/index.html
@@ -191,6 +191,7 @@
                 <option value="Administrativo">Administrativo</option>
                 <option value="Atoba">Atoba</option>
                 <option value="Brasil Express">Brasil Express</option>
+                <option value="Camboriu Express">Camboriu Express</option>
                 <option value="Ibis Combo">Ibis Combo</option>
                 <option value="Ibis Styles">Ibis Styles</option>
                 <option value="Itajai Express">Itajai Express</option>
@@ -211,6 +212,7 @@
                 <option value="Administrativo">Administrativo</option>
                 <option value="Atoba">Atoba</option>
                 <option value="Brasil Express">Brasil Express</option>
+                <option value="Camboriu Express">Camboriu Express</option>
                 <option value="Ibis Combo">Ibis Combo</option>
                 <option value="Ibis Styles">Ibis Styles</option>
                 <option value="Itajai Express">Itajai Express</option>
