--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <!-- Incluir Axios desde la CDN -->
      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+     <!-- SweetAlert 2 CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <title>Mensagem de Natal - Página Interna</title>
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <style>
@@ -293,7 +296,13 @@
 
     // Validar que los campos no estén vacíos
     if (!senderHotel || !senderName || !recipientHotel || !recipientName || !customMessage) {
-        alert('Por favor, complete todos os campos.');
+        // Reemplaza la alerta tradicional por SweetAlert
+        Swal.fire({
+            title: '¡Error!',
+            text: 'Por favor, complete todos os campos.',
+            icon: 'error',
+            confirmButtonText: 'OK'
+        });
         return; // Evitar enviar los datos si falta información
     }
 
@@ -317,14 +326,26 @@
     })
     .then(response => response.json()) // Convierte la respuesta en JSON
     .then(data => {
-        alert('Mensagem enviada');
+         // Reemplaza la alerta tradicional por SweetAlert
+         Swal.fire({
+            title: '¡Éxito!',
+            text: 'Mensaje enviado correctamente.',
+            icon: 'success',
+            confirmButtonText: 'OK'
+        });
         // Limpiar el formulario
         document.getElementById('christmas-message-form').reset();
         // Recargar mensajes
         loadMessages();
     })
     .catch(error => {
-        alert('Erro ao enviar a mensagem');
+        // Reemplaza la alerta tradicional por SweetAlert
+        Swal.fire({
+            title: '¡Error!',
+            text: 'Ocurrió un error al enviar el mensaje.',
+            icon: 'error',
+            confirmButtonText: 'OK'
+        });
         console.error('Erro:', error);
     });
 });
