--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@
          // Reemplaza la alerta tradicional por SweetAlert
          Swal.fire({
             title: '¡Éxito!',
-            text: 'Mensagem enviada correctamente.',
+            text: 'Mensagem enviada corretamente.',
             icon: 'success',
             confirmButtonText: 'OK'
         });
