--- a/public/index.html
+++ b/public/index.html
@@ -328,7 +328,7 @@
     .then(data => {
          // Reemplaza la alerta tradicional por SweetAlert
          Swal.fire({
-            title: '¡Éxito!',
+            title: '¡Êxito!',
             text: 'Mensagem enviada corretamente.',
             icon: 'success',
             confirmButtonText: 'OK'
