--- a/public/index.html
+++ b/public/index.html
@@ -341,8 +341,8 @@
     .catch(error => {
         // Reemplaza la alerta tradicional por SweetAlert
         Swal.fire({
-            title: '¡Error!',
-            text: 'Ocurrió un error al enviar el mensaje.',
+            title: '¡Erro!',
+            text: 'Ocurreu un erro ao enviar a mensagem.',
             icon: 'error',
             confirmButtonText: 'OK'
         });
